update tasks functionality + also resolved instability with getUserName